# browser-copilot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  compare_context_strategies.sh  compare_strategies.sh  debug_bad_request.py  debug_context_management.py  debug_report.py  debug_token_usage.py  debug_tool_calls.py  pyproject.toml  pytest.ini  requirements.txt  run_example.sh  test.md  test_bad_request_debug.py  test_check_success.py  test_context_heavy.md  test_context_strategy.md  test_hil.md  test_hil.sh  test_simple_context.md  test_simplified_hook.py  test_sliding_window_debug.py  test_true_sliding_window.py
.github/: pull_request_template.md
browser_copilot/: __init__.py  __main__.py  agent.py  browser_tools.py  cli.py  config_manager.py  config_wizard.py  constants.py  core.py  io_handlers.py  reporter.py  storage_manager.py  test_enhancer.py  token_optimizer.py  verbose_logger.py
browser_pilot/: __init__.py  __main__.py  cli.py  config_manager.py  config_wizard.py  core.py  io_handlers.py  reporter.py  storage_manager.py  test_enhancer.py  token_optimizer.py  verbose_logger.py
docs/: BEST_PRACTICES.md  COMMON_USE_CASES.md  CONFIGURATION.md  QUICK_START.md  TROUBLESHOOTING.md  WIZARD_GUIDE.md  agentic-apps-evaluation-framework.md  cleanup-log.md  common-use-cases.md  context-management-diagram.md  context-management-quick-ref.md  context-management.md  context-strategy-consolidation-plan.md  evaluation-implementation-spec.md  getting_started.md  hil-detection.md  hil-solution.md  human-in-the-loop-issue.md  human-in-the-loop.md  implemented-features.md  model-forge-requirements.md  presentation-qa-engineers.md  quick-start.md  release-notes-v1.1.0.md  test-writing-guide.md  test_writing_guide.md  verbose-mode-enhancements.md  wizard-guide.md
examples/: context-heavy-test.md  custom-prompt-example.txt  google-ai-search.md  hil-ask-human-test.md  hil-exit-test.md  hil-interactive-demo.md  hil-retry-test.md  hil-simple-test.md  hil-test-exploration.md  hil-test-form-choices.md  hil-test-google-search.md  saucedemo-shopping.md  weather-forecast.md
scripts/: build-test.sh
tests/: README.md  conftest.py  test_agent.py  test_browser_tools.py  test_cli_utils.py  test_config_manager.py  test_context_management.py  test_context_management_comprehensive.py  test_context_manager.py  test_core_engine.py  test_core_engine_unit.py  test_critical_acceptance.py  test_critical_core_simple.py  test_critical_core_simplified.py  test_hil_detection.py  test_hil_system.py  test_hil_system_comprehensive.py  test_integration.py  test_io_handlers.py  test_message_analyzer.py  test_report_parser_comprehensive.py  test_reporter.py  test_sliding_window_algorithm.py  test_storage_manager.py  test_test_enhancer.py  test_token_optimizer.py  (+1 more)
(+192 files in other folders)
